--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-appdirs==1.4.0
-daemonocle==1.0.1
-psutil==4.3.1
-requests==2.11.1
-toml==0.9.2
-boto3==1.4.0
-botocore==1.4.58
+appdirs==1.4.0      # seems like fine version for python3.4
+daemonocle==1.0.1   # last version with python3.4 support
+# psutil==4.3.1     # does not seem to be used
+requests==2.21.0
+toml==0.10.1
+boto3==1.14.30
+botocore==1.17.30
